--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -28,6 +28,8 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/txtAccessToken"
         android:hint="@string/search_query"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
         android:selectAllOnFocus="true" />
 
     <Button
